Changed  products.product_category  to products.category in products model for products category field

--- a/products/templates/snippets/card.html
+++ b/products/templates/snippets/card.html
@@ -5,6 +5,7 @@
 	{% endif %}
 	<div class="card-body">
 		<h4 class="cart-title">{{ instance.title }}</h4></a>
+		<h5 class="cart-title">{{ instance.Product category }}</h5>
 		<h6 class="cart-title">{{ instance.price }}CFAF</h6>
 		<!-- <a href="{% url 'products:detail' slug=instance.slug %}" class="btn btn-danger">URL shortcut</a> -->
 	</div>
