--- a/products/templates/product/product_list.html
+++ b/products/templates/product/product_list.html
@@ -50,7 +50,7 @@
                     <div class="divider"></div>
                     <div class="col-sm-8 mt-2">
                         <h4 class="orange-text" > FCFA{{ product.price}}</h4>
-                        <p>{{ product.description | truncatewords:50}}</p>
+                        <p style="text-align:justify">{{ product.description | truncatewords:50}}</p>
                         <a  href="/products/{{product.slug}}" class="btn btn-danger white-text pull-right my-4">View Details<i class="material-icons prefix">visibility</i></a>
                     </div>
                 </div>
