--- a/products/templates/product/product_detail.html
+++ b/products/templates/product/product_detail.html
@@ -16,7 +16,7 @@
             <div class="col-sm-8">
                 <div class="col-sm-6" >
                      <h1 class="card-title mt-4 text-darken-4" >{{ object.title}}</h1>
-                    <i class="text-danger" ><b>5 sold in less than 3hrs</b></i>
+                    <i class="text-danger" ><b>{{ object.category }}</b></i>
                     <div class="divider"></div>
 
                         <p>Condition: <b>New</b><br/>
