--- a/search/templates/search/snippets/search_form.html
+++ b/search/templates/search/snippets/search_form.html
@@ -5,15 +5,11 @@
 			 value="{{ request.GET.q }}"
 			 type="search"
 			 placeholder="Search"
-			 style="width:200px;"
+			 style="width:200px; border-color:orange; text-color:orange; font-weight:bolder;"
 
 	  >
 <!--	  <span class="input-group-btn">-->
-	  	<button class="btn btn-danger"
-				type="submit"
-		>
-			Search
-		</button>
+	  	<button class="btn btn-danger"type="submit">Search</button>
 <!--	  </span>-->
 
 </form>
