--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -5,10 +5,34 @@
 {% url 'login' as login_url %}
 {% url 'logout' as logout_url %}
 {% url 'cart:cart_home' as cart_url %}
+{% url 'categories:cats' as category_list_url %}
 {% load staticfiles %}
 
 
 
+
+<style>
+
+
+    ul li a:hover{
+        color: #fff;
+        background: #939393;
+    }
+    ul li ul.dropdown{
+        min-width: 100%; /* Set width of the dropdown */
+        background: #f2f2f2;
+        display: none;
+        position: absolute;
+        z-index: 999;
+        left: 0;
+    }
+    ul li:hover ul.dropdown{
+        display: block; /* Display the dropdown */
+    }
+    ul li ul.dropdown li{
+        display: block;
+    }
+</style>
 
 
 
@@ -17,7 +41,7 @@
     <div class="nav-wrapper">
       <a class="navbar-brand" href="{{ home_url }}"><img src="{% static 'images/logo/logo.png' %}" alt="Norway"></a>
       <ul class="right hide-on-med-and-down">
-        <li class="black-text">{% include 'search/snippets/search_form.html' %}</li>
+        <li>{% include 'search/snippets/search_form.html' %}</li>
       </ul>
     </div>
   </nav>
@@ -28,36 +52,47 @@
     <div class="nav-wrapper" style="padding-left:200px; padding-right:60px;" >
       <ul class=" hide-on-med-and-down"  >
          <li class="nav-item {% if request.path == home_url %} active {% endif %}">
-        <a class=" black-text nav-link" href="{{ home_url }}">Home<i class="fa fa-home"></i> <span class="sr-only">(current)</span></a>
+        <a class=" white-text nav-link" href="{{ home_url }}">Home<span class="sr-only">(current)</span></a>
       </li>
-      <li class=" nav-item {% if request.path == product_list_url %}  active {% endif %}">
-        <a class=" black-text nav-link" href="{{ product_list_url }}">Products<i class="fa fa-list"></i></a>
-      </li>
+        <ul>
+        <li style="margin-top:9px;">
+            <a href="#" title="Find Products Based On category">Products &#9662;</a>
+            <ul class="dropdown teal">
+              {% for category in categories %}
+                <li class=" nav-item {% if request.path == category_list_url %}  active {% endif %}"><a href="/categories/{{ category.name}}">{{ category.name }}</a></li>
+              {% endfor %}
+              <li class=" nav-item {% if request.path == product_list_url %}  active {% endif %}" style="margin-top:-5px;">
+                <a class=" white-text nav-link" href="{{ product_list_url }}">All Products</a>
+              </li>
+            </ul>
+        </li>
+
+    </ul>
 
       <li class="nav-item {% if request.path == contact_url %} active {% endif %}">
-        <a class=" black-text nav-link" href="{{ contact_url }}">Contact<i class="fa fa-envelope-open"></i></a>
+        <a class=" white-text nav-link" href="{{ contact_url }}">Contact</a>
       </li>
 
       <li class="nav-item {% if request.path == cart_url %} active {% endif %}">
-          <a class=" black-text nav-link" href="{{ cart_url }}"> Cart <b class="text-success">{{ request.session.cart_items }}</b><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+          <a class=" white-text nav-link" href="{{ cart_url }}"> Cart <b class="orange-text text-lighten-2">{{ request.session.cart_items }}</b></a>
       </li>
 
 
     {% if request.user.is_authenticated %}
       <li class=" right nav-item {% if request.path == logout_url %} active {% endif %}">
-          <a class="  black-text nav-link" href="{{ logout_url }}">Logout<i class="fa fa-arrow-right"></i></a>
+          <a class="  white-text nav-link" href="{{ logout_url }}">Logout</a>
       </li>
         <li class=" right nav-item {% if request.path == login_url %} active {% endif %}">
-          <a class=" black-text nav-link" href="#">
-            <b class="orange-text text-darken-4 text-capitalize">{{request.user.username}}</b><i class="fa fa-user"></i>
+          <a class="white-text nav-link" href="#">
+            <b class="orange-text text-darken-4 text-capitalize">{{request.user.username}}</b>
           </a>
       </li>
     {% else %}
       <li class=" right nav-item {% if request.path == register_url %} active {% endif %}">
-          <a class=" black-text nav-link" href="{{ register_url }}">Register<i class="fa fa-user"></i></i></a>
+          <a class="white-text nav-link" href="{{ register_url }}">Register</a>
       </li>
       <li class=" right capitalize">
-          <a class=" black-text nav-link" href="{{ login_url }}">Login<i class="fa fa-lock"></i></a>
+          <a class="white-text nav-link" href="{{ login_url }}">Login</a>
       </li>
 
       {% endif %}
