--- a/products/templates/snippets/update_cart.html
+++ b/products/templates/snippets/update_cart.html
@@ -5,7 +5,7 @@
 
 	    {% if cart.products.exists %}
 
-<!--		    <button type="submit" class="btn btn-link" >Remove</button>-->
+		    <button type="submit" class="btn btn-link" >Remove</button>
 		  {% else %}
 
 		    <button type ="submit" class="btn btn-primary right" style="margin-right:87px;"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Add To Cart</button>
