--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -6,14 +6,16 @@
 
 <div class="row">
   <div class="col-sm-4 mx-auto card hoverable z-depth-3">
-  <p class="pull-center orange-text text-darken-4 ">{{ title }}</p>
+      <div class="teal lighten-3 card hoverable z-depth-3" style="height:50px;margin-left:-15px; margin-right:-15px;margin-top:-1px;">
+            <p class="pull-center white-text center-align text-darken-4 " style="margin-top:5px; font-size:20px;">{{ title }}</p>
+      </div>
     <form class="contact" method="POST">
         {% csrf_token %}
         <div class="form-group">
             {{ form }}
         </div>
         <div class="form-group">
-            <input type="submit" value="Login" class="btn btn-primary pull-right">
+            <input type="submit" value="Login" class="btn teal white-text pull-right">
         </div>
     </form>
   </div> 
