--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -4,15 +4,17 @@
 
   
 <div class="row">
-  <div class="col-sm-4  mx-auto card hoverable z-depth-3">
-    <p class="pull-center orange-text text-darken-4">{{ title }}</p>
+  <div class="col-sm-4 mx-auto card hoverable z-depth-3 ">
+    <div class="teal lighten-3 card z-depth-3" style="height:50px;margin-left:-15px; margin-right:-15px;margin-top:-1px;">
+    <p class="pull-center white-text center-align" style="margin-top:5px; font-size:20px;">{{ title }}</p>
+    </div>
     <form class="contact" method="POST">
       {% csrf_token %}
       <div class="form-group">
           {{ form }}
       </div>
       <div class="form-group">
-          <input type="submit" value="Register" class="btn btn-primary pull-right">
+          <input type="submit" value="Register" class="btn white-text teal pull-right">
       </div>
     </form>
   </div> 
